--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,27 @@
-<h2>Sign up</h2>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
+
+<div class="row">
+  <div class="span6 offset3">
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  <%= f.label :User_Name %>
+  <%= f.email_field :uname, :autofocus => true %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= f.label :Email %>
+  <%= f.email_field :email%>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+ <%= f.label :Password %>
+  <%= f.password_field :password %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <%= f.label :Password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+<%= f.label :Upload_Photo %>
+<%= f.file_field :avatar %><br/>
 
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.submit "Create my account" , class: "btn btn-large btn-primary"%>
 <% end %>
-
+ </div>
+</div>
 <%= render "devise/shared/links" %>
