--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-	 <p class="notice"><%= notice %></p>
-	       <p class="alert"><%= alert %></p>
+	 	<% flash.each do |key, value| %>
+		        <div class="alert alert-<%= key %>"><%= value %></div>
+		      <% end %>
+	       
 	
       <%= yield %>
       <%= render 'layouts/footer' %>
